--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "frappe-gantt": "^0.5.0",
+    "moment": "^2.29.1",
+    "nuxt": "^2.15.7",
+    "sass": "^1.38.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -27,7 +30,9 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "jest": "^27.0.5",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
+    "sass-loader": "^10.1.1",
     "vue-jest": "^3.0.4"
   }
 }
